--- a/index.html
+++ b/index.html
@@ -11,5 +11,24 @@
 
 
 <body>
+    <section id="banner-part">
+        <div class="container">
+        <div class="main">
+
+            <div class="left">
+                <h1>Welcome to my</h1>
+                <h2><span class="blue">Portfolio</span> Website</h1>
+                <h3>Professional Web Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, pariatur. Sapiente, pariatur tempore. Possimus, repudiandae. Ex aspernatur veritatis eum facilis fugit illum, iusto ratione numquam nulla, beatae, obcaecati dolorum corporis.</p>
+                <a target="_blank" href="#">HIRE ME</a>
+            </div>
+
+            <div class="right">
+                <img src="images/sailor-bg.png" alt="banner-img">
+            </div>
+
+        </div>
+    </div>
+    </section>
 </body>
 </html>
