--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
 <body>
+
+<!-- =======================BANNER-PART STARTS HERE======================= -->
     <section id="banner-part">
         <div class="container">
         <div class="main">
@@ -30,5 +32,45 @@
         </div>
     </div>
     </section>
+    <!-- =======================BANNER-PART STARTS HERE======================= -->
+
+
+
+
+
+    <!-- =======================DREAM-PART STARTS HERE======================= -->
+    <section id="dream-part">
+        <div class="container">
+        <div class="main">
+
+            <div class="left">
+                <img src="images/dream-bg2.png" alt="bg">
+            </div>
+
+            
+            <div class="right">
+                <h2>Dream Big</h2>
+                <h3>Become a web developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium obcaecati quia quibusdam excepturi, natus consequatur iure ab nihil iusto autem officiis illum blanditiis veniam facere.</p>
+                <a target="_blank" href="#">DOWNLOAD RESUME</a>
+            </div>
+
+        </div>
+    </div>
+    </section>
+    <!-- =======================DREAM-PART ENDS HERE======================= -->
+
+
+
+
+
+
+    <!-- =======================EXPERINCE-PART STARTS HERE======================= -->
+
+<!-- 
+    =======================EXPERINCE-PART ENDS HERE======================= -->
+
 </body>
 </html>
+
+
