--- a/index.html
+++ b/index.html
@@ -66,9 +66,26 @@
 
 
     <!-- =======================EXPERINCE-PART STARTS HERE======================= -->
+    <section id="experience-part">
+        <div class="container">
+            <div class="title"><h2>Experiences</h2></div>
 
-<!-- 
-    =======================EXPERINCE-PART ENDS HERE======================= -->
+            <div class="main">
+                <div class="left">
+                    <h3>Baby Web Developer</h3>
+                    <h4>2020-2021 | Programming Hero Learner</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique corrupti sed repellendus facere nesciunt obcaecati molestias, magnam minus, nisi autem corporis. Assumenda nesciunt veritatis, architecto aspernatur dicta aut vero quia voluptatem adipisci! Nihil laboriosam consequuntur ab impedit dolor voluptate.</p>
+                </div>
+
+                <div class="right">
+                    <h3>Full Stack Developer</h3>
+                    <h4>2021-Present | Pro Level Developer</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo impedit quae reprehenderit nam, atque eveniet cum laudantium obcaecati, modi quasi nemo nesciunt unde iusto eos cumque perferendis ipsam harum facilis, eum vitae adipisci! Dicta delectus dolor odit, quam ab quae.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--=======================EXPERINCE-PART ENDS HERE======================= -->
 
 </body>
 </html>
