--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
     </section>
 <!--=======================EXPERINCE-PART ENDS HERE======================= -->
 
+
+
+
+<footer>
+    <p>© Sabarid Seenpha 2022, a Programming Hero initiative.</p>
+</footer>
+
+
 </body>
 </html>
 
