--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2><span class="blue">Portfolio</span> Website</h1>
                 <h3>Professional Web Developer</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, pariatur. Sapiente, pariatur tempore. Possimus, repudiandae. Ex aspernatur veritatis eum facilis fugit illum, iusto ratione numquam nulla, beatae, obcaecati dolorum corporis.</p>
-                <a target="_blank" href="#">HIRE ME</a>
+                <a target="_blank" href="https://www.linkedin.com/in/shabareed/">HIRE ME</a>
             </div>
 
             <div class="right">
@@ -52,7 +52,7 @@
                 <h2>Dream Big</h2>
                 <h3>Become a web developer</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium obcaecati quia quibusdam excepturi, natus consequatur iure ab nihil iusto autem officiis illum blanditiis veniam facere.</p>
-                <a target="_blank" href="#">DOWNLOAD RESUME</a>
+                <a href="#">DOWNLOAD RESUME</a>
             </div>
 
         </div>
